# ocr_service

./: .gitignore  Nexus AI Challenge_Ver.2.docx.ipynb  README.md  config.py  main.py  pyproject.toml
