[tool.poetry]
name = "ocr_service"
version = "0.1.0"
description = ""
authors = ["Skript_skript <damir_astana@list.ru>"]

[tool.poetry.dependencies]
python = "3.7"
opencv-python = "^4.5.3"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
